2001-09-04  Alan Modra  <amodra@bigpond.net.au>

	Merge from mainline.
	2001-07-23  Alan Modra  <amodra@bigpond.net.au>
	* gas/i386/opcode.d: Tweak lgdt for 2001-07-18 change.
	* gas/i386/intel.d: Likewise.

2001-07-16  Philip Blundell  <philb@gnu.org>

	* gas/arm/arm7t.d, gas/arm/inst.d: Tweak expected output for
	change to disassembler.

2001-06-20  Tom Rix  <trix@redhat.com>

	* gas/ppc/aix.exp: New file, aix specific tests.
	* gas/ppc/align.s: New file, .comm alignment test.

2001-06-18  Philip Blundell  <philb@gnu.org>

	* gas/arm/arm.exp (msr_bad): Deleted.
	* gas/arm/msr-bad.s: Likewise.

2001-06-11  Alan Modra  <amodra@bigpond.net.au>

	Merge from mainline.
	2001-06-10  H.J. Lu  <hjl@gnu.org>
	* gas/elf/section2.l: Match various white spaces.
	* gas/elf/section2.e: Support 64bit ELF.
	* gas/elf/section2.e-mips: Likewise.

	2001-06-08  Alan Modra  <amodra@bigpond.net.au>
	* gas/elf/elf.exp (run_list_test): Undo $readelf change in 2001-06-07.

	2001-06-07  H.J. Lu  <hjl@gnu.org>
	* gas/elf/section2.e-mips: New file.
	* gas/elf/elf.exp (run_list_test): Add suffix.
	Pass -mips as suffix to run_list_test for mips.
	* gas/elf/section2.l: Match ".*GAS.*" instead of
	"GAS LISTING .*".
	* gas/mips/mips.exp: Set xfail for "lineno" on Linux/mips.
	* gas/mips/empic.d: Support stabs.
	* gas/mips/mips16-e.d: Likewise.
	* gas/mips/mips16-f.d: Likewise.
	* gas/mips/mipsel16-f.d: Likewise.
	* gas/mips/telempic.d: Likewise.
	* gas/mips/tempic.d: Likewise.
	* gas/mips/tmips16-e.d: Likewise.
	* gas/mips/tmipsel16-e.d: Likewise.

	2001-06-06  H.J. Lu  <hjl@gnu.org>
	* gas/mips/elf-rel3.s: New file.
	* gas/mips/elf-rel3.d: Likewise.
	* gas/mips/elfel-rel3.s: Likewise.
	* gas/mips/elfel-rel3.d: Likewise.
	* gas/mips/mips.exp: Run elf-rel3/elfel-rel3.
	* gas/elf/elf.exp (run_list_test): New.
	Run section2 with run_list_test.
	* gas/elf/section2.e: New file.
	* gas/elf/section2.l: Likewise.
	* gas/elf/section2.s: Likewise.

	2001-06-04  H.J. Lu  <hjl@gnu.org>